# mykernel

./: .gitignore  CMakeLists.txt  Makefile  analysis_report.csv  linker.ld
arch/: acpi.cpp  ahci_c.cpp  controller.cpp  handler_PF.cpp  handlers.cpp  idt.cpp  ioapic.cpp  lapic.cpp  msr.cpp  pci.cpp  rsp.cpp  xhci_c._cpp  xhci_c.cpp
debug/: log.cpp  trash.cpp_
driver/: ahci.cpp  disk.cpp  hid.cpp  nvme.cpp  protocol.cpp  xhci._cpp  xhci.cpp  xhci_p.cpp
filesys/: FAT32.cpp  disksid.cpp  file.cpp  gpt.cpp  mbr.cpp  partition.cpp  partitioner.cpp
include/arch/: acpi.h  ahci_c.h  controller.h  handler.h  idt.h  io.h  ioapic.h  lapic.h  msr.h  pci.h  rsp.h  xhci_c._h  xhci_c.h
include/debug/: log.h
include/driver/: ahci.h  disk.h  hid.h  nvme.h  protocol.h  xhci._h  xhci.h  xhci_p.h
include/filesys/: FAT32.h  disksid.h  file.h  gpt.h  mbr.h  partition.h  partitioner.h
include/kernel/: console.h  handle.h  kernel.h  keyboard.h  pipe.h  power.h  process.h  syscall.h  timer_handler.h
include/mm/: PhysPageAllocator  VirtPageAllocator  allocator  shm.h
include/util/: heaptree.h  memory.h  new.h  queue.h  size.h  util.h  vector.h
init/: entry.cpp  init.cpp
kernel/: console.cpp  keyboard.cpp  pipe.cpp  power.cpp  process.cpp  syscall.cpp  timer_handler.cpp
mm/: PhysPageAllocator.cpp  VirtPageAllocator.cpp  allocator.cpp  shm.cpp
mykernel/: FAT32.cpp  FAT32.h  ahci.cpp  console.cpp  disk.cpp  disk.h  disksid.h  gpt.cpp  handler_PF.cpp  handlers.cpp  init.cpp  kernel.h  log.cpp  pci.cpp  process.cpp  process.h  syscall.cpp  timer_handler.cpp
notes/: bug.txt
util/: memory.cpp  util.cpp  vector.cpp
